// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  disabled={true}
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "css-p1t6ie-RippleButton-contentWrapper",
      }
    }
    disabled={true}
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <ButtonWithStyles
      className=" ui-shared__ripple-button"
      disabled={true}
      flat={false}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Button
        className=" ui-shared__ripple-button"
        classes={
          {
            "button": "css-uy2be8-Button-button",
            "content": "css-8oymua-Button-content",
            "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
          }
        }
        disabled={true}
        flat={false}
        testId="Button"
        type="primary"
        wrapContent={true}
      >
        <ButtonWithStyles
          className="ui-shared__button css-uy2be8-Button-button  ui-shared__ripple-button"
          classes={
            {
              "button": "css-uy2be8-Button-button",
              "content": "css-8oymua-Button-content",
              "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
            }
          }
          disabled={true}
          testId="Button"
        >
          <Button
            className="ui-shared__button css-uy2be8-Button-button  ui-shared__ripple-button"
            classes={
              {
                "button": "css-uy2be8-Button-button",
                "content": "css-8oymua-Button-content",
                "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
                "root": "css-18hbw04-Button-root",
              }
            }
            disabled={true}
            onClick={null}
            testId="Button"
          >
            <button
              className="ui-shared__button css-uy2be8-Button-button  ui-shared__ripple-button ui-shared__button ui-shared__ripple-button css-16lne2g-Button-root-Button-button common__button"
              classes={
                {
                  "button": "css-uy2be8-Button-button",
                  "content": "css-8oymua-Button-content",
                  "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
                  "root": "css-18hbw04-Button-root",
                }
              }
              data-test-id="Button"
              disabled={true}
              onClick={null}
            >
              <div
                className="css-8oymua-Button-content"
              >
                Press me
              </div>
            </button>
          </Button>
        </ButtonWithStyles>
      </Button>
    </ButtonWithStyles>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "css-p1t6ie-RippleButton-contentWrapper",
      }
    }
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <ButtonWithStyles
      className=" ui-shared__ripple-button"
      flat={false}
      testId="Button"
      type="primary"
      wrapContent={false}
    >
      <Button
        className=" ui-shared__ripple-button"
        classes={
          {
            "button": "css-16ta6rw-Button-button",
            "content": "css-xq2oa7-Button-content",
            "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
          }
        }
        flat={false}
        testId="Button"
        type="primary"
        wrapContent={false}
      >
        <ButtonWithStyles
          className="ui-shared__button css-16ta6rw-Button-button  ui-shared__ripple-button"
          classes={
            {
              "button": "css-16ta6rw-Button-button",
              "content": "css-xq2oa7-Button-content",
              "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
            }
          }
          testId="Button"
        >
          <Button
            className="ui-shared__button css-16ta6rw-Button-button  ui-shared__ripple-button"
            classes={
              {
                "button": "css-16ta6rw-Button-button",
                "content": "css-xq2oa7-Button-content",
                "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
                "root": "css-18hbw04-Button-root",
              }
            }
            disabled={false}
            onClick={null}
            testId="Button"
          >
            <button
              className="ui-shared__button css-16ta6rw-Button-button  ui-shared__ripple-button ui-shared__button ui-shared__ripple-button css-1a2wu6i-Button-root-Button-button common__button"
              classes={
                {
                  "button": "css-16ta6rw-Button-button",
                  "content": "css-xq2oa7-Button-content",
                  "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
                  "root": "css-18hbw04-Button-root",
                }
              }
              data-test-id="Button"
              disabled={false}
              onClick={null}
            >
              <Ripple
                className="css-p1t6ie-RippleButton-contentWrapper "
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple css-p1t6ie-RippleButton-contentWrapper "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  Press me
                </div>
              </Ripple>
            </button>
          </Button>
        </ButtonWithStyles>
      </Button>
    </ButtonWithStyles>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<RippleButton
  className=""
  classes={
    {
      "contentWrapper": "css-p1t6ie-RippleButton-contentWrapper",
    }
  }
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  Press me
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButtonWithStyles
  className=""
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="regular"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "css-p1t6ie-RippleButton-contentWrapper",
      }
    }
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <ButtonWithStyles
      className=" ui-shared__ripple-button"
      flat={false}
      testId="Button"
      type="regular"
      wrapContent={false}
    >
      <Button
        className=" ui-shared__ripple-button"
        classes={
          {
            "button": "css-lxh1to-Button-button",
            "content": "css-136auiv-Button-content",
            "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
          }
        }
        flat={false}
        testId="Button"
        type="regular"
        wrapContent={false}
      >
        <ButtonWithStyles
          className="ui-shared__button css-lxh1to-Button-button  ui-shared__ripple-button"
          classes={
            {
              "button": "css-lxh1to-Button-button",
              "content": "css-136auiv-Button-content",
              "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
            }
          }
          testId="Button"
        >
          <Button
            className="ui-shared__button css-lxh1to-Button-button  ui-shared__ripple-button"
            classes={
              {
                "button": "css-lxh1to-Button-button",
                "content": "css-136auiv-Button-content",
                "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
                "root": "css-18hbw04-Button-root",
              }
            }
            disabled={false}
            onClick={null}
            testId="Button"
          >
            <button
              className="ui-shared__button css-lxh1to-Button-button  ui-shared__ripple-button ui-shared__button ui-shared__ripple-button css-20dlot-Button-root-Button-button common__button"
              classes={
                {
                  "button": "css-lxh1to-Button-button",
                  "content": "css-136auiv-Button-content",
                  "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
                  "root": "css-18hbw04-Button-root",
                }
              }
              data-test-id="Button"
              disabled={false}
              onClick={null}
            >
              <Ripple
                className="css-p1t6ie-RippleButton-contentWrapper "
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple css-p1t6ie-RippleButton-contentWrapper "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  Press me
                </div>
              </Ripple>
            </button>
          </Button>
        </ButtonWithStyles>
      </Button>
    </ButtonWithStyles>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="secondary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "css-p1t6ie-RippleButton-contentWrapper",
      }
    }
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="secondary"
    wrapContent={true}
  >
    <ButtonWithStyles
      className=" ui-shared__ripple-button"
      flat={false}
      testId="Button"
      type="secondary"
      wrapContent={false}
    >
      <Button
        className=" ui-shared__ripple-button"
        classes={
          {
            "button": "css-10h5wwx-Button-button",
            "content": "css-1fwglzq-Button-content",
            "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
          }
        }
        flat={false}
        testId="Button"
        type="secondary"
        wrapContent={false}
      >
        <ButtonWithStyles
          className="ui-shared__button css-10h5wwx-Button-button  ui-shared__ripple-button"
          classes={
            {
              "button": "css-10h5wwx-Button-button",
              "content": "css-1fwglzq-Button-content",
              "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
            }
          }
          testId="Button"
        >
          <Button
            className="ui-shared__button css-10h5wwx-Button-button  ui-shared__ripple-button"
            classes={
              {
                "button": "css-10h5wwx-Button-button",
                "content": "css-1fwglzq-Button-content",
                "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
                "root": "css-18hbw04-Button-root",
              }
            }
            disabled={false}
            onClick={null}
            testId="Button"
          >
            <button
              className="ui-shared__button css-10h5wwx-Button-button  ui-shared__ripple-button ui-shared__button ui-shared__ripple-button css-17fhe9u-Button-root-Button-button common__button"
              classes={
                {
                  "button": "css-10h5wwx-Button-button",
                  "content": "css-1fwglzq-Button-content",
                  "contentWrapper": "css-1c9zfd8-Button-contentWrapper",
                  "root": "css-18hbw04-Button-root",
                }
              }
              data-test-id="Button"
              disabled={false}
              onClick={null}
            >
              <Ripple
                className="css-p1t6ie-RippleButton-contentWrapper "
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple css-p1t6ie-RippleButton-contentWrapper "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  Press me
                </div>
              </Ripple>
            </button>
          </Button>
        </ButtonWithStyles>
      </Button>
    </ButtonWithStyles>
  </RippleButton>
</RippleButtonWithStyles>
`;
